DH: fix scroll on iphone

--- a/wp-content/themes/denholm/scss/layouts/_layout.scss
+++ b/wp-content/themes/denholm/scss/layouts/_layout.scss
@@ -31,9 +31,11 @@ body {
   text-size-adjust: none;
   // background: #ccc;
   font-size: 12px;
-  
+
   @include susy-media(mobileOnly) {
     overflow-x: hidden;
+    position: relative;
+
   }
 
   &.is-show {
